# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-23 22:18:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-110

    Summary:
      retrlines is working
    Revision:
      missingh--head--1.0--patch-110


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 21:03:06 GMT	John Goerzen <jgoerzen@complete.org>	patch-109

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-109


    modified files:
     ChangeLog Makefile libsrc/MissingH/List.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs libsrc/MissingH/Str.hs
     testsrc/Listtest.hs testsrc/Network/FTP/Parsertest.hs


2004-10-23 19:54:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-108

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-108


    modified files:
     ChangeLog libsrc/MissingH/Network.hs
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 19:18:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-107

    Summary:
      Checkpointing
    Revision:
      missingh--head--1.0--patch-107


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/Parser.hs


2004-10-23 16:57:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-106

    Summary:
      Checkpointing for fix
    Revision:
      missingh--head--1.0--patch-106


    modified files:
     ChangeLog Makefile libsrc/MissingH/Network/FTP/Client.hs


2004-10-23 16:06:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-105

    Summary:
      Playing around with basics
    Revision:
      missingh--head--1.0--patch-105


    removed files:
     debian/libghc6-missingh-dev.postinst.debhelper
     debian/libghc6-missingh-dev.prerm.debhelper

    modified files: